# tiger

./: Cargo.toml  LICENSE  README.md  build.bat
src/: device.rs  error.rs  kernel.cu  learning.rs  main.rs  nn.rs  player.rs  search.rs  transposition_table.rs
src/kernel/: device.rs
